components/src/patterns/side-menu/side-menu.scss
@import '@scania/typography/dist/scss/mixins';
@import '@scania/typography/dist/scss/tokens';
@import '@scania/grid/dist/scss/grid.scss';

/* HEADER ICON. KINDA WANT THIS IN THE HEADER COMPONENT INSTEAD? */

.sdds-nav__mob-menu-btn {
  display: none;
  transition: background-color 0.15s ease-in-out;

  @media all and (max-width: $grid-md) {
    display: flex;
  }

  &:hover {
    background-color: var(--sdds-blue-700);
  }

  svg {
    /* Non retina off-pixel rounding fix */
    height: 21px;
    width: 21px;

    path {
      fill: var(--sdds-white);
    }
  }
}

/* MIXINS */

@mixin item-states {
  &:focus {
    outline: none;
    background-color: var(--sdds-grey-50);

    &::after {
      content: ' ';
      display: block;
      position: absolute;
      top: -1px;
      bottom: -1px;
      left: 0;
      right: 0;
      border: 1px solid var(--sdds-blue-400);
      z-index: 100;
    }
  }

  &:hover {
    background-color: var(--sdds-grey-50);
  }

  &:active {
    background-color: var(--sdds-grey-300) !important;
  }
}

/* REFACTOR STYLES */

.sdds-sidebar {
  &.side-menu {
    background-color: var(--sdds-white);
    display: flex;
    flex-flow: column;
    justify-content: space-between;
    transition: 0.15s ease-in-out;
    flex-basis: auto;
    min-width: auto;
    flex-shrink: 0;
    width: 288px;
    position: relative;
    border-right: 1px solid var(--sdds-grey-300);

    @media all and (max-width: $grid-md) {
      position: absolute;
      top: 0;
      bottom: 0;
      padding-top: 64px;
      transform: translateX(-100%);
      pointer-events: none;
      width: 75%;

      &.mobile-menu-open {
        transform: translateX(0);
        pointer-events: all;

        &::after {
          opacity: 0.4;
        }
      }

      &::after {
        content: ' ';
        position: absolute;
        background: var(--sdds-black);
        opacity: 0;
        pointer-events: none;
        top: 0;
        bottom: 0;
        left: 100%;
        width: 1000px;
        transition: 0.15s ease-in-out;
      }
    }

    @media all and (max-width: 375px) {
      width: 100%;
    }
  }

  // SIDE MENU MOBILE HEADER
  &-mheader {
    position: absolute;
    height: 64px;
    top: 0;
    width: 100%;
    display: none;
    border-bottom: 1px solid var(--sdds-grey-300);

    @media all and (max-width: $grid-md) {
      display: block;
    }

    &__close {
      height: 64px;
      width: 68px;
      display: flex;
      align-items: center;
      justify-content: center;
      position: absolute;
      top: 0;
    }
  }

  // SIDE MENU WRAPPER
  &-nav {
    margin: 0;
    padding: 0;
    list-style: none;
    overflow: hidden;

    // MAIN MENU
    &--main {
      margin-bottom: 68px;
      overflow-y: auto;

      @media all and (max-width: $grid-md) {
        margin-bottom: -1px;
        padding-top: 1px;
      }

      &:last-child {
        margin-bottom: 0;
      }
    }

    // BOTTOM MENU
    &--bottom {
      position: absolute;
      bottom: 0;
      width: 100%;
      background-color: var(--sdds-white);

      @media all and (max-width: $grid-md) {
        display: none;
      }

      .sdds-sidebar-nav__item-link {
        border-bottom: none;
        border-top: 1px solid var(--sdds-grey-300);
      }

      .sdds-sidebar-nav__item {
        border-bottom: none;

        &:last-child {
          .sdds-sidebar-nav__item-link {
            &:focus {
              &::after {
                bottom: 0;
              }
            }
          }
        }
      }
    }

    // SIDE MENU WRAPPER - CONDITIONS
    &.icons-disabled {
      .sdds-sidebar-nav__icon {
        display: none;
      }

      .sdds-sidebar-nav-subnav__item {
        .sdds-sidebar-nav__item-link {
          padding-left: 24px;
        }
      }
    }

    // SINGLE ITEM
    &__item {
      border-bottom: 1px solid var(--sdds-grey-300);

      &-link {
        @include type-style('headline-07');
        @include item-states;

        color: var(--sdds-grey-958);
        text-decoration: none;
        padding: 24px 40px 24px 24px;
        display: flex;
        align-items: flex-start;
        position: relative;
        min-height: 20px;
        box-sizing: content-box;
        transition: background-color 0.15s ease-in-out;

        .sdds-sidebar-nav__item-text {
          margin-top: 3px;
          opacity: 1;
          transition: opacity 0.15s ease-in-out;
          min-width: 160px;
        }
      }

      // SINGLE ITEM - CONDITIONS
      &.subnav-open {
        .sdds-sidebar-nav-subnav {
          display: block;
        }

        .sdds-sidebar-nav__chevron {
          transform: rotate(180deg);
        }
      }
    }

    .sdds-item--active {
      .sdds-sidebar-nav__item-link {
        background-color: var(--sdds-grey-50);
        position: relative;

        &::before {
          content: ' ';
          position: absolute;
          left: 0;
          top: 0;
          bottom: 0;
          width: 4px;
          background-color: var(--sdds-blue-400);
        }
      }
    }

    // SINGLE SUB-ITEM
    &-subnav {
      list-style: none;
      margin: 0;
      padding: 0;
      display: none;

      &__item {
        .sdds-sidebar-nav__item-link {
          @include type-style('detail-02');
          @include item-states;

          color: var(--sdds-grey-800);
          text-decoration: none;
          display: block;
          padding: 16px 24px 16px 56px;
          white-space: nowrap;
          transition: opacity 0.15s ease-in-out,
            background-color 0.15s ease-in-out;
          font-weight: normal;
          min-height: auto;

          .sdds-sidebar-nav__item-text {
            @include type-style('detail-02');

            transition: opacity 0.15s ease-in-out, height 0.15s ease-in-out;
          }
        }

        .sdds-sidebar-nav__item-title {
          @include type-style('detail-02');

          color: var(--sdds-grey-958);
          text-decoration: none;
          padding: 16px 24px 16px 56px;
          white-space: nowrap;
          transition: opacity 0.15s ease-in-out,
            background-color 0.15s ease-in-out;
          min-height: auto;
          font-weight: 600;
          display: none;
        }
      }

      .sdds-item--active {
        .sdds-sidebar-nav__item-link {
          @include type-style('headline-07');

          color: var(--sdds-grey-958);
        }
      }
    }

    &__icon {
      margin-right: 12px;
      line-height: 0;
      width: 20px;
      height: 20px;
      min-width: 20px;
      transition: 0.15s ease-in-out;
    }

    &__chevron {
      position: absolute;
      right: 16px;
      top: calc(50% - 4px);
      transform-origin: center;
      transition: 0.15s ease-in-out;
    }
  }

  &.collapsed {
    width: 68px;

    .sdds-sidebar-nav__item {
      .sdds-sidebar-nav__item-text,
      .sdds-sidebar-nav__item-title {
        opacity: 0;
        height: 1px;
      }

      &:hover {
        .sdds-sidebar-nav-subnav {
          opacity: 1;
          pointer-events: all;
          display: initial;
        }
      }
    }

    .sdds-sidebar-nav-subnav__item {
      display: block;

      .sdds-sidebar-nav__item-title {
        opacity: 1;
        height: auto;
        display: block;
      }
    }

    .sdds-sidebar-nav__chevron {
      opacity: 0;
    }

    .sdds-sidebar-toggle {
      .sdds-sidebar-nav__icon {
        transform: rotate(180deg);
      }
    }

    .sdds-sidebar-nav-subnav {
      left: 68px;
      position: absolute;
      background: var(--sdds-white);
      width: 245px;
      transform: translateY(-69px);
      z-index: 1;
      opacity: 0;
      display: none;
      pointer-events: none;
      box-shadow: 0 3px 3px rgb(0 0 0 / 15%);

      .sdds-sidebar-nav-subnav__item {
        .sdds-sidebar-nav__item-title,
        .sdds-sidebar-nav__item-link {
          padding-left: 24px;
          border-bottom: 1px solid var(--sdds-grey-300);
        }

        .sdds-sidebar-nav__item-link {
          .sdds-sidebar-nav__item-text {
            opacity: 1;
          }
        }
      }
    }
  }

  /* SCROLL STUFF */

  /* width */
  ::-webkit-scrollbar {
    width: 2px;
    background-color: var(--sdds-grey-300);
  }

  /* Track */
  ::-webkit-scrollbar-track {
    background-color: var(--sdds-grey-300);
  }

  /* Handle */
  ::-webkit-scrollbar-thumb {
    background-color: var(--sdds-grey-500);
    border-radius: 0;
  }
}

